[package]
name = "abc030-rs"
version = "0.1.0"
authors = ["hiratasa <36002166+hiratasa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
rustc-hash = "1.1.0"
bitset-fixed = "0.1.0"
itertools = "0.9.0"
ordered-float = "1.0.2"
itertools-num = "0.1.3"

[[bin]]
name = "abc030-a"
path = "src/a.rs"

[[bin]]
name = "abc030-b"
path = "src/b.rs"

[[bin]]
name = "abc030-c"
path = "src/c.rs"

[[bin]]
name = "abc030-d"
path = "src/d.rs"

[[bin]]
name = "abc030-e"
path = "src/e.rs"

[[bin]]
name = "abc030-f"
path = "src/f.rs"
