[package]
name = "abc114-rs"
version = "0.1.0"
authors = ["hiratasa <36002166+hiratasa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
rustc-hash = "1.1.0"
bitset-fixed = "0.1.0"
itertools = "0.9.0"
ordered-float = "1.0.2"

[[bin]]
name = "abc114-a"
path = "src/a.rs"

[[bin]]
name = "abc114-b"
path = "src/b.rs"

[[bin]]
name = "abc114-c"
path = "src/c.rs"

[[bin]]
name = "abc114-d"
path = "src/d.rs"

[[bin]]
name = "abc114-e"
path = "src/e.rs"

[[bin]]
name = "abc114-f"
path = "src/f.rs"
