[package]
name = "abc180-rs"
version = "0.1.0"
authors = ["hiratasa <36002166+hiratasa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"

[[bin]]
name = "abc180-a"
path = "src/a.rs"

[[bin]]
name = "abc180-b"
path = "src/b.rs"

[[bin]]
name = "abc180-c"
path = "src/c.rs"

[[bin]]
name = "abc180-d"
path = "src/d.rs"

[[bin]]
name = "abc180-e"
path = "src/e.rs"

[[bin]]
name = "abc180-f"
path = "src/f.rs"
