[package]
name = "abc229-rs"
version = "0.1.0"
authors = ["hiratasa <36002166+hiratasa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
rustc-hash = "1.1.0"
bitset-fixed = "0.1.0"
itertools = "0.9.0"
ordered-float = "1.0.2"
itertools-num = "0.1.3"
rand = { version = "0.7.3", features = ["small_rng"] }
permutohedron = "0.2.4"
proconio = "0.3.6"

[[bin]]
name = "abc229-a"
path = "src/a.rs"

[[bin]]
name = "abc229-b"
path = "src/b.rs"

[[bin]]
name = "abc229-c"
path = "src/c.rs"

[[bin]]
name = "abc229-d"
path = "src/d.rs"

[[bin]]
name = "abc229-e"
path = "src/e.rs"

[[bin]]
name = "abc229-f"
path = "src/f.rs"

[[bin]]
name = "abc229-g"
path = "src/g.rs"
