[package]
name = "agc021-rs"
version = "0.1.0"
authors = ["hiratasa <36002166+hiratasa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "agc021-a"
path = "src/a.rs"

[[bin]]
name = "agc021-b"
path = "src/b.rs"

[[bin]]
name = "agc021-c"
path = "src/c.rs"

[[bin]]
name = "agc021-d"
path = "src/d.rs"

[[bin]]
name = "agc021-e"
path = "src/e.rs"

[[bin]]
name = "agc021-f"
path = "src/f.rs"
