[package]
name = "agc036-rs"
version = "0.1.0"
authors = ["hiratasa <36002166+hiratasa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"

[[bin]]
name = "agc036-a"
path = "src/a.rs"

[[bin]]
name = "agc036-b"
path = "src/b.rs"

[[bin]]
name = "agc036-c"
path = "src/c.rs"

[[bin]]
name = "agc036-d"
path = "src/d.rs"

[[bin]]
name = "agc036-e"
path = "src/e.rs"

[[bin]]
name = "agc036-f"
path = "src/f.rs"
