[package]
name = "agc049-rs"
version = "0.1.0"
authors = ["hiratasa <36002166+hiratasa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
rustc-hash = "1.1.0"

[[bin]]
name = "agc049-a2"
path = "src/a2.rs"

[[bin]]
name = "agc049-a"
path = "src/a.rs"

[[bin]]
name = "agc049-b"
path = "src/b.rs"

[[bin]]
name = "agc049-c"
path = "src/c.rs"

[[bin]]
name = "agc049-d"
path = "src/d.rs"

[[bin]]
name = "agc049-e"
path = "src/e.rs"

[[bin]]
name = "agc049-f"
path = "src/f.rs"
