[package]
name = "arc054-rs"
version = "0.1.0"
authors = ["hiratasa <36002166+hiratasa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
rustc-hash = "1.1.0"
bitset-fixed = "0.1.0"
itertools = "0.9.0"
ordered-float = "1.0.2"

[[bin]]
name = "arc054-a"
path = "src/a.rs"

[[bin]]
name = "arc054-b"
path = "src/b.rs"

[[bin]]
name = "arc054-c"
path = "src/c.rs"

[[bin]]
name = "arc054-d"
path = "src/d.rs"

[[bin]]
name = "arc054-e"
path = "src/e.rs"

[[bin]]
name = "arc054-f"
path = "src/f.rs"
