[package]
name = "arc105-rs"
version = "0.1.0"
authors = ["hiratasa <36002166+hiratasa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
rustc-hash = "1.1.0"
permutohedron = "0.2.4"

[[bin]]
name = "arc105-a"
path = "src/a.rs"

[[bin]]
name = "arc105-b"
path = "src/b.rs"

[[bin]]
name = "arc105-c"
path = "src/c.rs"

[[bin]]
name = "arc105-d"
path = "src/d.rs"

[[bin]]
name = "arc105-e"
path = "src/e.rs"

[[bin]]
name = "arc105-f"
path = "src/f.rs"
